<resources>
    <string name="app_name">Chatapp</string>
    <string name="title_activity_chat">Chat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="lastMessagePlaceholder">last messageeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</string>
    <string name="lastMessageDatePlaceholder">12/5/2023 11:50.75</string>
    <string name="displayNamePlaceholder">John Wick</string>
    <string name="newChatTitle">Add a new chat!</string>
    <string name="namePlaceholder">Name</string>
    <string name="addNewUser">ADD</string>
    <string name="closeDialog">CLOSE</string>
    <string name="logout">Logout</string>
    <string name="username"> </string>
    <string name="messageSenderHint">Type your message here</string>
    <string name="placeholderMessage">hello</string>
    <string name="msgTimePlaceholder">00:00</string>
    <string name="triangle">▼</string>
    <string name="password">Password</string>
    <string name="login_btn_str">Login</string>
    <string name="logo">Logo</string>
    <string name="username_hint">Username</string>
    <string name="login_to_chatapp">Login to CHATAPP!</string>
    <string name="register_to_chatapp">Register to CHATAPP!</string>
    <string name="repeatpassword">RepeatPassword</string>
    <string name="displayname">DisplayName</string>
    <string name="register">Register</string>
    <string name="upload_prfpic">Upload Profile Picture</string>
    <string name="wrong_credentials">Wrong username or password</string>
    <string name="serverip">10.100.102.20:5000</string>
    <string name="app_settings">App Settings</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="switch_theme_mode">Switch Theme Mode</string>
    <string name="todo">TODO</string>
    <string name="error_connecting_the_server">Error connecting the server</string>
    <string name="register_title">Register</string>
    <string name="not_registered">Not registered yet?\nclick here!</string>
    <string name="already_registered">Already registered?\nClicke here!</string>
    <string name="please_repeat_the_password_again">Please repeat the password again</string>
    <string name="wrong_username">Username must contain 4–20 characters, can include letters, digits and _-!.</string>
    <string name="wrong_password">The password must contain 8–20 characters, at least one uppercase and lowercase leters, special character and digit</string>
    <string name="wrong_repeat">Password and repeated Password does not match</string>
    <string name="wrong_displayName">Please enter display name</string>
    <string name="similar_display_name">Please don\'t use your real name for the displayed name</string>
    <string name="wrong_profilePic">Please choose a valid profile picture</string>
    <string name="error_occurred">Error occurred</string>
    <string name="big_profile_pic">Selected image exceeds the maximum allowed size of 50KB</string>

</resources>