<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.Register"
    style="@style/background">

    <ImageView
        style="@style/logo"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:contentDescription="@string/logo"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />




    <LinearLayout
        style="@style/layout_inputs"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:alpha="0.7"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            style="@style/title"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_to_chatapp"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            style="@style/inputs_fields"
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Username"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="25sp" />


        <EditText
            style="@style/inputs_fields"
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="25sp" />

        <EditText
            style="@style/inputs_fields"
            android:id="@+id/RepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:ems="10"
            android:hint="@string/repeatpassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="25sp" />

        <EditText
            style="@style/inputs_fields"
            android:id="@+id/displayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:ems="10"
            android:hint="@string/displayname"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="25sp" />

        <Button
            style="@style/btn"
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onUploadButtonClick"
            android:text="@string/upload_prfpic"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <Button
        style="@style/btn"
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:height="80dp"
        android:width="150dp"
        android:text="@string/login_btn_str"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        style="@style/inputs_fields"
        android:id="@+id/error_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>