<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layoutDirection="ltr"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundCornersImage" />

    <TextView
        android:id="@+id/displayName"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/lastMessageDate"
        android:layout_toEndOf="@+id/profilePic"
        android:ellipsize="end"
        android:fontFamily="@font/baloo_bhaijaan"
        android:maxLines="1"
        android:text="@string/displayNamePlaceholder"
        android:textSize="20sp" />

    <TextView
        style="@style/chat_preview_details"
        android:fontFamily="@font/chilanka"
        android:id="@+id/lastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/profilePic"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_margin="10dp"
        android:text="@string/lastMessagePlaceholder"
        android:textColor="#969696"
        android:textSize="16sp" />

    <TextView
        style="@style/chat_preview_details"
        android:id="@+id/lastMessageDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/chilanka"
        android:text="@string/lastMessageDatePlaceholder"
        android:textSize="16sp" />
</RelativeLayout>