<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Chat.Chat">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userPFP"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:shapeAppearanceOverlay="@style/roundCornersImage"
            app:srcCompat="@drawable/doubt_background" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/logoutBTN"
            android:layout_toEndOf="@+id/userPFP"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/username"
            android:textSize="20sp" />

        <Button
            android:id="@+id/logoutBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#FF3E3E"
            android:text="@string/logout"
            android:textColorHighlight="#FF0000"
            android:textColorLink="#FF0000"
            android:textSize="20sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lvChats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addChat"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        android:foreground="@drawable/ic_add_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        android:foreground="@drawable/setting_icom_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>