<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat.ChatBody"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            style="@style/arrow"
            android:contentDescription="@string/todo"
            android:id="@+id/backBTN"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:foreground="@drawable/ic_goback"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/chatPFP"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/backBTN"
            app:shapeAppearanceOverlay="@style/roundCornersImage"
            />

        <TextView
            android:id="@+id/chatName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/my_username"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            android:layout_toEndOf="@+id/chatPFP"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/displayNamePlaceholder"
            android:textSize="40sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/messageInput"
            style="@style/add_message_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toStartOf="@+id/sendButton"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/messageSenderHint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="15sp" />

        <Button
            style="@style/arrow"
            android:contentDescription="@string/todo"
            android:id="@+id/sendButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:foreground="@drawable/ic_sendbtn"
            />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="#00000000"
        android:stackFromBottom="true"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>